# rae

./: .clang-format  .gitignore  CMakeLists.txt  imgui.ini  index.html  index.js  index.wasm
cmake/: llvm-toolchain.cmake
content/: shell.html
scripts/: build_wasm.sh  config.sh  deploy_wasm.sh  gen_vscode_settings.py  get_dawn.sh  get_emsdk.sh  get_llvm.sh  host_wasm.sh
src/: application.cpp  application.hpp  main.cpp  render_context.cpp  render_context.hpp
vscode_settings/: cmake-kits.json  launch.json  settings.json
web/: index.html
